syntax = "proto3";

import "result.proto";

package msgProto;

message ServerInfo
{
    string Ip = 1;
    int32 Port = 2;
}

message PingAck 
{
	//
}

message LoginReq 
{
    string Version = 1;
	string Platform = 2;
	string Uid = 3;
}

message LoginAck 
{
	ResultCode Result = 1;
	ServerInfo Server = 2;
	string GameToken = 3;
	string GameSvcId = 4; // 选中的一台game服务器Id
}

message VerifyReq 
{
	string GameToken = 1;
	string GameSvcId = 2;
	int64 AccountId = 3;
}

message VerifyAck 
{
	ResultCode Result = 1;
}